force-app/main/default/objects/Broker_Account_Approval_History__c/Broker_Account_Approval_History__c.object-meta.xml
<CustomObject>
    <label>Broker Account Approval History</label>
    <nameField>
        <displayFormat>BAA-{0000}</displayFormat>
        <label>Broker Account Approval History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broker Account Approval Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>