force-app/main/default/objects/Broker_Account_Approval_History__c/fields/Broker_Account__c.field-meta.xml
<CustomField>
    <fullName>Broker_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Broker Account Approval Histories</relationshipLabel>
    <relationshipName>Broker_Account_Approval_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>