force-app/main/default/objects/Broker_Account_Approval_History__c/fields/Field_Update_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Update_Type__c</fullName>
    <label>Field Update Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Name Field Update</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>