force-app/main/default/objects/Broker_Account_Approval_History__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending With CHRM OPS Manager</fullName>
            </value>
            <value>
                <fullName>Pending with Audit</fullName>
            </value>
            <value>
                <fullName>Rejected by CHRM OPS Manager</fullName>
            </value>
            <value>
                <fullName>Rejected by Audit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>